<resources>
    <string name="app_name">Between</string>
    <string name="title_launcher">Between</string>
    <string name="title_itineraries">History</string>
    <string name="title_login">Login with Facebook</string>
    <string name="title_map">Cluster Map Test</string>
    <string name="title_suggested_places">Suggestions</string>
    <string name="title_detail">Details</string>
    <string name="title_detail_parameterized">Place %1$s of %2$s</string>
    <string name="title_detail_map">Map</string>
    <string name="title_detail_photos">Photo</string>
    <string name="title_detail_photos_parameterized">Photo %1$s of %2$s</string>
    <string name="title_detail_photos_parameterized_more">Photo %1$s of %2$s+</string>
    <string name="title_search">Search</string>
    <string name="title_dummy_search">Dummy Search</string>
    <string name="title_invitation">Invite your friend</string>
    <string name="user_search_title">Search your location</string>
    <string name="friend_search_title">Search friend\'s location</string>
    <string name="user_query_hint">Your address or city</string>
    <string name="friend_query_hint">Friend\'s address or city</string>
    <string name="search_attribution_contentDescription">Search powered by Google</string>
    <string name="search_no_results">No locations found</string>
    <string name="action_search">Search</string>
    <string name="action_send">Send to friend</string>
    <string name="action_view_as_map">View results in a map</string>
    <string name="action_view_as_list">View results in a list</string>
    <string name="action_show_people_location">Show you and your friend\'s locations</string>
    <string name="action_hide_people_location">Hide you and your friend\'s locations</string>
    <string name="location_entry_header">Find places to meet between you and your friend</string>
    <string name="user_location">Where are you coming from?</string>
    <string name="friend_location">Where is your friend coming from?</string>
    <string name="search_button">Search in between</string>
    <string name="select_button">Select</string>
    <string name="selected_button">Selected</string>
    <string name="invite_button">Send Invite</string>
    <string name="send_button">Send</string>
    <string name="item_distance_from_midPoint_miles">%1$s mi off</string>
    <string name="item_distance_from_midPoint_meters">%1$s m off</string>
    <string name="item_distance_from_midPoint_km">%1$s km off</string>
    <string name="item_travel_info_imperial">%1$s mi, %2$s mins</string>
    <string name="item_travel_info_metric_m">%1$s m, %2$s mins</string>
    <string name="item_travel_info_metric_km">%1$s km, %2$s mins</string>
    <string name="detail_name_fake">Espresso Vivace Roasteria</string>
    <string name="detail_reviews_fake">445 reviews</string>
    <string name="detail_checkins_fake">1002 checkins</string>
    <string name="detail_address_fake">532 Broadway E, Seattle</string>
    <string name="detail_categories_fake">Coffee and Tea</string>
    <string name="detail_distance_fake">0.1 mi away from center (Closer to you)</string>
    <string name="detail_travel_info_fake">Estimated travel: 4.3 mi, 5 mins</string>
    <string name="detail_crossStreets_fake">"Cross streets: Mercer St and Republican St"</string>
    <string name="detail_phone_fake">"(206)8602722"</string>
    <string name="detail_webAddress_fake">"espressovivace.com"</string>
    <string name="detail_hours_fake">"Mon-Sun:6:00am-11:00pm"</string>
    <string name="detail_priceRange_fake">$$$</string>
    <string name="detail_culinaryTeam_fake">Chef John Howie: Owner/Chef</string>
    <string name="detail_description_fake">Seastar Restaurant and Raw Bar features specialty items like alderwood plank salmon and Dungeness crab, hand rolled sushi, award winning wines and hand crafted cocktails. Chef John Howie offers the freshest choice in seasonal NW fish, seafood, steaks, and produce.</string>
    <string name="detail_fbAddress_fake">"https://www.facebook.com/Seastar-Restaurant-Raw-Bar-63847024438/"</string>
    <string name="detail_specialities_fake">Lunch, Dinner, Drinks</string>
    <string name="detail_services_fake">Takes Reservations, Walk-Ins Welcome, Good For Groups, Waiter Service</string>
    <string name="detail_paymentOptions_fake">Visa, American Express, Mastercard</string>
    <string name="detail_parking_fake">Street, Parking lot, Valet</string>
    <string name="detail_distance_from_midPoint_miles">%1$s mi away from center</string>
    <string name="detail_distance_from_midPoint_meters">%1$s m away from center</string>
    <string name="detail_distance_from_midPoint_km">%1$s km away from center</string>
    <string name="detail_closer_to_user">Closer to you</string>
    <string name="detail_closer_to_friend">Closer to friend</string>
    <string name="detail_equidistant">Equidistant</string>
    <string name="detail_travel_info_imperial">Estimated travel: %1$s mi, %2$s mins</string>
    <string name="detail_travel_info_metric_m">Estimated travel: %1$s m, %2$s mins</string>
    <string name="detail_travel_info_metric_km">Estimated travel: %1$s km, %2$s mins</string>
    <string name="detail_crossStreets">Cross streets: %1$s</string>
    <string name="detail_reviews">Reviews</string>
    <string name="review_count">%1$d reviews</string>
    <plurals name="detail_ratings">
        <item quantity="one">%1$s star</item>
        <item quantity="other">%1$s stars</item>
    </plurals>
    <plurals name="detail_like_count">
        <item quantity="one">%1$d person likes this</item>
        <item quantity="other">%1$d people like this</item>
    </plurals>
    <plurals name="detail_checkin_count">
        <item quantity="one">%1$d person has been here</item>
        <item quantity="other">%1$d people have been here</item>
    </plurals>
    <plurals name="short_like_count">
        <item quantity="one">%1$d like</item>
        <item quantity="other">%1$d likes</item>
    </plurals>
    <plurals name="short_checkin_count">
        <item quantity="one">%1$d checkin</item>
        <item quantity="other">%1$d checkins</item>
    </plurals>
    <string name="detail_website">Website</string>
    <string name="detail_hours">Hours</string>
    <string name="detail_price_range">Price</string>
    <string name="detail_culinary_team">Culinary team</string>
    <string name="detail_description">Description</string>
    <string name="detail_specialities">Specialities</string>
    <string name="detail_services">Services</string>
    <string name="detail_parking">Parking</string>
    <string name="detail_payment_options">Payment methods</string>
    <string name="not_available">Not available</string>
    <string name="detail_container_not_available">Sorry, details are not available at this time.</string>
    <string name="image_placeholder_content_description">Image not available</string>
    <string name="no_likes">0 likes</string>
    <string name="no_checkins">0 checkins</string>
    <string name="no_reviews">0 reviews</string>
    <string name="always_open">Open 24/7</string>
    <string name="no_suggestions">No suggestions</string>
    <string name="no_selection">You have not made any selections.</string>
    <string name="no_itineraries">No history</string>
    <string name="detail_website_button">Website</string>
    <string name="detail_phone_button">Call</string>
    <string name="detail_map_button">Map</string>
    <string name="map_contentDescription">Map view of search results</string>
    <string name="map_marker_user_location">Your location</string>
    <string name="map_marker_friend_location">"Friend's location"</string>
    <string name="map_marker_you">You</string>
    <string name="map_marker_friend">Friend</string>
    <string name="location_permission_rationale">Your location information is needed so that it can be shown on the map</string>
    <string name="map_cluster_infoWindow_title">%1$d Results</string>
    <string name="map_cluster_infoWindow_best_rating">Best rating:</string>
    <plurals name="map_cluster_infoWindow_high_rating">
        <item quantity="one">4+ stars: %1$d result</item>
        <item quantity="other">4+ stars: %1$d results</item>
    </plurals>
    <plurals name="most_likes">
        <item quantity="one">Most likes: %1$d person</item>
        <item quantity="other">Most likes: %1$d people</item>
    </plurals>
    <plurals name="most_checkins">
        <item quantity="one">Most checkins: %1$d person</item>
        <item quantity="other">Most checkins: %1$d people</item>
    </plurals>
    <string name="detail_map_contentDescription">Map view of %1$s</string>
    <string name="detail_map_travel_info_metric_m">Route summary: %1$s\nDistance: %2$s m\nTime: %3$s mins</string>
    <string name="detail_map_travel_info_metric_km">Route summary: %1$s\nDistance: %2$s km\nTime: %3$s mins</string>
    <string name="detail_map_travel_info_imperial">Route summary: %1$s\nDistance: %2$s mi\nTime: %3$s mins</string>
    <string name="invite_image_overlay_text">Invite your friend</string>
    <string name="friend_name">"Enter friend's name"</string>
    <string name="friend_phone">"Enter friend's phone number to invite"</string>
    <string name="friend_email">"Enter friend's email to invite"</string>
    <string name="invite_by_email">Invite by email instead</string>
    <string name="invite_by_text">Invite by text instead</string>
    <string name="sms_hello_no_name">Hey,</string>
    <string name="sms_hello_with_name">Hey %1$s,</string>
    <plurals name="sms_body">
        <item quantity="one">What do you think of this option?</item>
        <item quantity="other">What do you think of these options?</item>
    </plurals>
    <string name="email_hello_no_name">Hey,</string>
    <string name="email_hello_with_name">Hey %1$s,</string>
    <string name="email_subject">Invitation from Between</string>
    <plurals name="email_body">
        <item quantity="one">What do you think of this option?</item>
        <item quantity="other">What do you think of these options?</item>
    </plurals>
    <string name="email_body_begin">I found these options on Btwn:</string>
    <string name="email_body_end">What do you think?</string>
    <string name="google_play_services_error">Oops! We failed to resolve the Google Play Services error. Please restart app and try again.</string>
    <string name="get_place_by_id_error">Oops! We failed to geocode you and your friend\'s locations. Please go back and try again.</string>
    <string name="snackbar_not_logged_in">Oops, Facebook is currently the preferred data source but you are not logged in.</string>
    <string name="snackbar_no_selections">Select at least one place before inviting your friend.</string>
    <string name="snackbar_fb_login_canceled">Facebook login canceled.</string>
    <string name="snackbar_fb_login_error">Oops! Facebook login error.</string>
    <string name="snackbar_action_login">Login</string>
    <string name="drawer_title_search">Search</string>
    <string name="drawer_title_history">History</string>
    <string name="drawer_title_login">Login</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="setting_use_metric">Use metric units</string>
    <string name="setting_metric_on">Metric</string>
    <string name="setting_imperial_on">Imperial</string>
    <string name="setting_metric_description">Show distance in kilometers</string>
    <string name="setting_imperial_description">Show distance in kilometers</string>
    <string name="setting_data_source">Data source</string>
    <string name="setting_default_data_source">@string/data_source_google</string>
    <string name="setting_search_radius">Search radius</string>
    <string name="setting_default_search_radius">3</string>
    <string name="setting_search_term">Type of places to search</string>
    <string name="setting_default_search_term">@string/search_type_restaurants</string>
</resources>