<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_maps_local_restaurant"
            android:title="@string/drawer_title_search"/>

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_action_history"
            android:title="@string/drawer_title_history"/>

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_action_account_circle"
            android:title="@string/drawer_title_login"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/drawer_title_settings"/>
    </group>
</menu>