<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorAccent"
        android:gravity="bottom"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:textColor="@android:color/white"
        android:text="@string/location_entry_header"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/user_location"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="16dp"
        android:gravity="left|center_vertical"
        android:text="@string/user_location" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/textColorSecondary"/>

    <TextView
        android:id="@+id/friend_location"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="16dp"
        android:gravity="left|center_vertical"
        android:text="@string/friend_location" />

    <RelativeLayout
        android:id="@+id/card_buttons"
        android:layout_below="@id/friend_location"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/search_button"
            style="@style/Medium_AccentButtonStyle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="end|center_vertical"
            android:paddingRight="24dp"
            android:text="@string/search_button"/>
    </RelativeLayout>
</LinearLayout>