<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragment.InvitationFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/colorPrimary"
                android:gravity="bottom"
                android:paddingLeft="@dimen/card_content_padding"
                android:paddingBottom="@dimen/card_content_padding"
                android:textColor="@android:color/white"
                android:text="@string/invite_image_overlay_text"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/friend_phone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="@style/EditTextStyle"
                android:imeOptions="actionSend"
                android:inputType="phone"
                android:hint="@string/friend_phone" />

            <EditText
                android:id="@+id/friend_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="@style/EditTextStyle"
                android:imeOptions="actionSend"
                android:inputType="textEmailAddress"
                android:hint="@string/friend_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="@dimen/card_content_padding"
                style="@style/Medium_PrimaryTextViewStyle"
                android:text="Selected Places:"/>

            <TextView
                android:id="@+id/selected_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                style="@style/Medium_SecondaryTextViewStyle"
                android:text="Nothing selected."/>

            <Button
                android:id="@+id/invite_send_button"
                style="@style/Medium_AccentButtonStyle"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/invite_button"/>
        </LinearLayout>
</ScrollView>
